3rd/parser.output
Terminals unused in grammar

    SINGLE_MARK


State 9 conflicts: 5 reduce/reduce
State 10 conflicts: 5 reduce/reduce
State 194 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | class_identifier program

    3 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT

    4 class_body: ε
    5           | functions class_body
    6           | class_members class_body
    7           | class_identifier class_body

    8 class_members: variable_initialization SEMICOLON
    9              | variable_declaration SEMICOLON
   10              | variable_assignment SEMICOLON
   11              | member_access SEMICOLON
   12              | class_instance SEMICOLON

   13 class_instance: CLASS_NAME IDENT EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

   14 member_access: IDENT DOT IDENT parenthesis

   15 parenthesis: ε
   16            | BRACKET_LEFT BRACKET_RIGHT

   17 VAR_NAME: IDENT
   18         | CLASS_NAME

   19 visibility: ε
   20           | PUBLIC
   21           | PRIVATE

   22 variable_declaration: visibility INT VAR_NAME dnext_int
   23                     | visibility DOUBLE VAR_NAME dnext_double
   24                     | visibility CHAR VAR_NAME dnext_char
   25                     | visibility BOOLEAN VAR_NAME dnext_bool
   26                     | visibility STRING VAR_NAME dnext_string

   27 dnext_int: ε
   28          | COMMA VAR_NAME dnext_int

   29 dnext_double: ε
   30             | COMMA VAR_NAME dnext_double

   31 dnext_char: ε
   32           | COMMA VAR_NAME dnext_char

   33 dnext_bool: ε
   34           | COMMA VAR_NAME dnext_bool

   35 dnext_string: ε
   36             | COMMA VAR_NAME dnext_string

   37 variable_initialization: visibility INT int_init next_int
   38                        | visibility DOUBLE double_init next_double
   39                        | visibility CHAR char_init next_char
   40                        | visibility BOOLEAN bool_init next_bool
   41                        | visibility STRING string_init next_string

   42 next_int: ε
   43         | COMMA int_init next_int

   44 next_double: ε
   45            | COMMA double_init next_double

   46 next_char: ε
   47          | COMMA char_init next_char

   48 next_bool: ε
   49          | COMMA bool_init next_bool

   50 next_string: ε
   51            | COMMA string_init next_string

   52 int_init: VAR_NAME EQUAL_SIGN expression

   53 double_init: VAR_NAME EQUAL_SIGN DOUBLE_VALUE

   54 char_init: VAR_NAME EQUAL_SIGN CHAR_VALUE

   55 bool_init: VAR_NAME EQUAL_SIGN BOOLEAN_VALUE

   56 string_init: VAR_NAME EQUAL_SIGN STRING_VALUE

   57 variable_assignment: VAR_NAME EQUAL_SIGN expression

   58 expression: variable_value
   59           | VAR_NAME
   60           | expression PLUS expression
   61           | expression MINUS expression
   62           | expression MULTIPLY expression
   63           | expression DIVIDE expression
   64           | BRACKET_LEFT expression BRACKET_RIGHT
   65           | MINUS expression

   66 variable_type: INT
   67              | DOUBLE
   68              | CHAR
   69              | BOOLEAN
   70              | STRING

   71 variable_value: INT_VALUE
   72               | CHAR_VALUE
   73               | DOUBLE_VALUE
   74               | BOOLEAN_VALUE
   75               | STRING_VALUE

   76 functions: function_visibility VOID VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT
   77          | function_visibility variable_type VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

   78 function_visibility: PRIVATE
   79                    | PUBLIC

   80 arguments: ε
   81          | parameters

   82 parameters: variable_type VAR_NAME arguments_end

   83 arguments_end: ε
   84              | COMMA parameters

   85 inside_void_function: inside_brackets
   86                     | inside_brackets RETURN SEMICOLON

   87 inside_function: inside_brackets RETURN VAR_NAME SEMICOLON
   88                | inside_brackets RETURN variable_value SEMICOLON

   89 inside_brackets: ε
   90                | loops_n_condition inside_brackets
   91                | variable_assignment SEMICOLON

   92 loops_n_condition: for_statement
   93                  | switch
   94                  | do_while
   95                  | if
   96                  | variable_initialization SEMICOLON
   97                  | variable_assignment SEMICOLON
   98                  | class_instance SEMICOLON
   99                  | member_access SEMICOLON

  100 for_statement: FOR BRACKET_LEFT for_condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT

  101 for_condition: for_variable SEMICOLON for_comparison SEMICOLON for_step

  102 for_variable: ε
  103             | variable_type VAR_NAME EQUAL_SIGN variable_value

  104 for_comparison: ε
  105               | VAR_NAME CONDITION_SYMBOL comparison_value for_bool_operator

  106 comparison_value: INT_VALUE
  107                 | DOUBLE_VALUE
  108                 | CHAR_VALUE
  109                 | BOOLEAN_VALUE
  110                 | VAR_NAME

  111 for_bool_operator: ε
  112                  | BOOL_SYMBOL for_comparison

  113 for_step: ε
  114         | VAR_NAME step

  115 step: INCREAMENT_DECREAMENT
  116     | LOOP_STEP step_value

  117 step_value: INT_VALUE
  118           | DOUBLE_VALUE

  119 do_while: DO CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT WHILE BRACKET_LEFT do_condition BRACKET_RIGHT SEMICOLON

  120 do_condition: operand CONDITION_SYMBOL operand do_bool_operator
  121             | BOOLEAN_VALUE
  122             | VAR_NAME

  123 do_bool_operator: ε
  124                 | BOOL_SYMBOL do_condition

  125 operand: VAR_NAME
  126        | INT_VALUE
  127        | DOUBLE_VALUE
  128        | CHAR_VALUE
  129        | BOOLEAN_VALUE

  130 switch: SWITCH BRACKET_LEFT VAR_NAME BRACKET_RIGHT CURLY_BRACKET_LEFT case default CURLY_BRACKET_RIGHT

  131 case: CASE switch_value COLON switch_content case
  132     | ε

  133 switch_value: INT_VALUE
  134             | CHAR_VALUE

  135 switch_content: ε
  136               | BREAK SEMICOLON

  137 default: DEFAULT COLON switch_content
  138        | ε

  139 if: IF BRACKET_LEFT if_condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT else_if

  140 else_if: ε
  141        | ELSE IF BRACKET_LEFT if_condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT else_if
  142        | else

  143 else: ELSE CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT

  144 if_condition: operand CONDITION_SYMBOL operand if_bool_operator
  145             | BOOLEAN_VALUE
  146             | VAR_NAME

  147 if_bool_operator: ε
  148                 | BOOL_SYMBOL if_condition


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CURLY_BRACKET_LEFT (258) 3 76 77 100 119 130 139 141 143
    CURLY_BRACKET_RIGHT (259) 3 76 77 100 119 130 139 141 143
    BRACKET_LEFT (260) 13 16 64 76 77 100 119 130 139 141
    BRACKET_RIGHT (261) 13 16 64 76 77 100 119 130 139 141
    EQUAL_SIGN (262) 13 52 53 54 55 56 57 103
    SEMICOLON (263) 8 9 10 11 12 86 87 88 91 96 97 98 99 101 119 136
    SINGLE_MARK (264)
    COLON (265) 131 137
    COMMA (266) 28 30 32 34 36 43 45 47 49 51 84
    DOT (267) 14
    PLUS (268) 60
    MINUS (269) 61 65
    MULTIPLY (270) 62
    DIVIDE (271) 63
    UMINUS (272)
    PUBLIC <sval> (273) 3 20 79
    PRIVATE <sval> (274) 21 78
    CLASS (275) 3
    CLASS_NAME <sval> (276) 3 13 18
    NEW (277) 13
    IF (278) 139 141
    ELSE (279) 141 143
    FOR (280) 100
    DO (281) 119
    WHILE (282) 119
    CONDITION_SYMBOL (283) 105 120 144
    BOOL_SYMBOL (284) 112 124 148
    INCREAMENT_DECREAMENT (285) 115
    LOOP_STEP (286) 116
    SWITCH (287) 130
    CASE (288) 131
    DEFAULT (289) 137
    BREAK (290) 136
    RETURN (291) 86 87 88
    IDENT <sval> (292) 13 14 17
    VOID <sval> (293) 76
    INT <sval> (294) 22 37 66
    CHAR <sval> (295) 24 39 68
    DOUBLE <sval> (296) 23 38 67
    BOOLEAN <sval> (297) 25 40 69
    STRING <sval> (298) 26 41 70
    INT_VALUE <ival> (299) 71 106 117 126 133
    CHAR_VALUE <cval> (300) 54 72 108 128 134
    DOUBLE_VALUE <dval> (301) 53 73 107 118 127
    BOOLEAN_VALUE <sval> (302) 55 74 109 121 129 145
    STRING_VALUE <sval> (303) 56 75


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2
        on right: 0 2
    class_identifier (51)
        on left: 3
        on right: 2 7
    class_body (52)
        on left: 4 5 6 7
        on right: 3 5 6 7
    class_members (53)
        on left: 8 9 10 11 12
        on right: 6
    class_instance (54)
        on left: 13
        on right: 12 98
    member_access (55)
        on left: 14
        on right: 11 99
    parenthesis (56)
        on left: 15 16
        on right: 14
    VAR_NAME <sval> (57)
        on left: 17 18
        on right: 22 23 24 25 26 28 30 32 34 36 52 53 54 55 56 57 59 76 77 82 87 103 105 110 114 122 125 130 146
    visibility <ival> (58)
        on left: 19 20 21
        on right: 22 23 24 25 26 37 38 39 40 41
    variable_declaration (59)
        on left: 22 23 24 25 26
        on right: 9
    dnext_int (60)
        on left: 27 28
        on right: 22 28
    dnext_double (61)
        on left: 29 30
        on right: 23 30
    dnext_char (62)
        on left: 31 32
        on right: 24 32
    dnext_bool (63)
        on left: 33 34
        on right: 25 34
    dnext_string (64)
        on left: 35 36
        on right: 26 36
    variable_initialization (65)
        on left: 37 38 39 40 41
        on right: 8 96
    next_int (66)
        on left: 42 43
        on right: 37 43
    next_double (67)
        on left: 44 45
        on right: 38 45
    next_char (68)
        on left: 46 47
        on right: 39 47
    next_bool (69)
        on left: 48 49
        on right: 40 49
    next_string (70)
        on left: 50 51
        on right: 41 51
    int_init <sval> (71)
        on left: 52
        on right: 37 43
    double_init <sval> (72)
        on left: 53
        on right: 38 45
    char_init <sval> (73)
        on left: 54
        on right: 39 47
    bool_init <sval> (74)
        on left: 55
        on right: 40 49
    string_init <sval> (75)
        on left: 56
        on right: 41 51
    variable_assignment <sval> (76)
        on left: 57
        on right: 10 91 97
    expression <ival> (77)
        on left: 58 59 60 61 62 63 64 65
        on right: 52 57 60 61 62 63 64 65
    variable_type <sval> (78)
        on left: 66 67 68 69 70
        on right: 77 82 103
    variable_value <ival> (79)
        on left: 71 72 73 74 75
        on right: 58 88 103
    functions (80)
        on left: 76 77
        on right: 5
    function_visibility <ival> (81)
        on left: 78 79
        on right: 76 77
    arguments (82)
        on left: 80 81
        on right: 76 77
    parameters (83)
        on left: 82
        on right: 81 84
    arguments_end (84)
        on left: 83 84
        on right: 82
    inside_void_function (85)
        on left: 85 86
        on right: 76
    inside_function (86)
        on left: 87 88
        on right: 77
    inside_brackets (87)
        on left: 89 90 91
        on right: 85 86 87 88 90 100 119 139 141 143
    loops_n_condition (88)
        on left: 92 93 94 95 96 97 98 99
        on right: 90
    for_statement (89)
        on left: 100
        on right: 92
    for_condition (90)
        on left: 101
        on right: 100
    for_variable (91)
        on left: 102 103
        on right: 101
    for_comparison (92)
        on left: 104 105
        on right: 101 112
    comparison_value (93)
        on left: 106 107 108 109 110
        on right: 105
    for_bool_operator (94)
        on left: 111 112
        on right: 105
    for_step (95)
        on left: 113 114
        on right: 101
    step (96)
        on left: 115 116
        on right: 114
    step_value (97)
        on left: 117 118
        on right: 116
    do_while (98)
        on left: 119
        on right: 94
    do_condition (99)
        on left: 120 121 122
        on right: 119 124
    do_bool_operator (100)
        on left: 123 124
        on right: 120
    operand (101)
        on left: 125 126 127 128 129
        on right: 120 144
    switch (102)
        on left: 130
        on right: 93
    case (103)
        on left: 131 132
        on right: 130 131
    switch_value (104)
        on left: 133 134
        on right: 131
    switch_content (105)
        on left: 135 136
        on right: 131 137
    default (106)
        on left: 137 138
        on right: 130
    if (107)
        on left: 139
        on right: 95
    else_if (108)
        on left: 140 141 142
        on right: 139 141
    else (109)
        on left: 143
        on right: 142
    if_condition (110)
        on left: 144 145 146
        on right: 139 141 148
    if_bool_operator (111)
        on left: 147 148
        on right: 144


State 0

    0 $accept: • program $end

    PUBLIC  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program           go to state 2
    class_identifier  go to state 3


State 1

    3 class_identifier: PUBLIC • CLASS CLASS_NAME CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT

    CLASS  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    2 program: class_identifier • program

    PUBLIC  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program           go to state 6
    class_identifier  go to state 3


State 4

    3 class_identifier: PUBLIC CLASS • CLASS_NAME CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 7


State 5

    0 $accept: program $end •

    $default  accept


State 6

    2 program: class_identifier program •

    $default  reduce using rule 2 (program)


State 7

    3 class_identifier: PUBLIC CLASS CLASS_NAME • CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT

    CURLY_BRACKET_LEFT  shift, and go to state 8


State 8

    3 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT • class_body CURLY_BRACKET_RIGHT

    PUBLIC      shift, and go to state 9
    PRIVATE     shift, and go to state 10
    CLASS_NAME  shift, and go to state 11
    IDENT       shift, and go to state 12

    CURLY_BRACKET_RIGHT  reduce using rule 4 (class_body)
    $default             reduce using rule 19 (visibility)

    class_identifier         go to state 13
    class_body               go to state 14
    class_members            go to state 15
    class_instance           go to state 16
    member_access            go to state 17
    VAR_NAME                 go to state 18
    visibility               go to state 19
    variable_declaration     go to state 20
    variable_initialization  go to state 21
    variable_assignment      go to state 22
    functions                go to state 23
    function_visibility      go to state 24


State 9

    3 class_identifier: PUBLIC • CLASS CLASS_NAME CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT
   20 visibility: PUBLIC •
   79 function_visibility: PUBLIC •

    CLASS  shift, and go to state 4

    VOID      reduce using rule 79 (function_visibility)
    INT       reduce using rule 20 (visibility)
    INT       [reduce using rule 79 (function_visibility)]
    CHAR      reduce using rule 20 (visibility)
    CHAR      [reduce using rule 79 (function_visibility)]
    DOUBLE    reduce using rule 20 (visibility)
    DOUBLE    [reduce using rule 79 (function_visibility)]
    BOOLEAN   reduce using rule 20 (visibility)
    BOOLEAN   [reduce using rule 79 (function_visibility)]
    STRING    reduce using rule 20 (visibility)
    STRING    [reduce using rule 79 (function_visibility)]
    $default  reduce using rule 20 (visibility)


State 10

   21 visibility: PRIVATE •
   78 function_visibility: PRIVATE •

    VOID      reduce using rule 78 (function_visibility)
    INT       reduce using rule 21 (visibility)
    INT       [reduce using rule 78 (function_visibility)]
    CHAR      reduce using rule 21 (visibility)
    CHAR      [reduce using rule 78 (function_visibility)]
    DOUBLE    reduce using rule 21 (visibility)
    DOUBLE    [reduce using rule 78 (function_visibility)]
    BOOLEAN   reduce using rule 21 (visibility)
    BOOLEAN   [reduce using rule 78 (function_visibility)]
    STRING    reduce using rule 21 (visibility)
    STRING    [reduce using rule 78 (function_visibility)]
    $default  reduce using rule 21 (visibility)


State 11

   13 class_instance: CLASS_NAME • IDENT EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT
   18 VAR_NAME: CLASS_NAME •

    IDENT  shift, and go to state 25

    $default  reduce using rule 18 (VAR_NAME)


State 12

   14 member_access: IDENT • DOT IDENT parenthesis
   17 VAR_NAME: IDENT •

    DOT  shift, and go to state 26

    $default  reduce using rule 17 (VAR_NAME)


State 13

    7 class_body: class_identifier • class_body

    PUBLIC      shift, and go to state 9
    PRIVATE     shift, and go to state 10
    CLASS_NAME  shift, and go to state 11
    IDENT       shift, and go to state 12

    CURLY_BRACKET_RIGHT  reduce using rule 4 (class_body)
    $default             reduce using rule 19 (visibility)

    class_identifier         go to state 13
    class_body               go to state 27
    class_members            go to state 15
    class_instance           go to state 16
    member_access            go to state 17
    VAR_NAME                 go to state 18
    visibility               go to state 19
    variable_declaration     go to state 20
    variable_initialization  go to state 21
    variable_assignment      go to state 22
    functions                go to state 23
    function_visibility      go to state 24


State 14

    3 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT class_body • CURLY_BRACKET_RIGHT

    CURLY_BRACKET_RIGHT  shift, and go to state 28


State 15

    6 class_body: class_members • class_body

    PUBLIC      shift, and go to state 9
    PRIVATE     shift, and go to state 10
    CLASS_NAME  shift, and go to state 11
    IDENT       shift, and go to state 12

    CURLY_BRACKET_RIGHT  reduce using rule 4 (class_body)
    $default             reduce using rule 19 (visibility)

    class_identifier         go to state 13
    class_body               go to state 29
    class_members            go to state 15
    class_instance           go to state 16
    member_access            go to state 17
    VAR_NAME                 go to state 18
    visibility               go to state 19
    variable_declaration     go to state 20
    variable_initialization  go to state 21
    variable_assignment      go to state 22
    functions                go to state 23
    function_visibility      go to state 24


State 16

   12 class_members: class_instance • SEMICOLON

    SEMICOLON  shift, and go to state 30


State 17

   11 class_members: member_access • SEMICOLON

    SEMICOLON  shift, and go to state 31


State 18

   57 variable_assignment: VAR_NAME • EQUAL_SIGN expression

    EQUAL_SIGN  shift, and go to state 32


State 19

   22 variable_declaration: visibility • INT VAR_NAME dnext_int
   23                     | visibility • DOUBLE VAR_NAME dnext_double
   24                     | visibility • CHAR VAR_NAME dnext_char
   25                     | visibility • BOOLEAN VAR_NAME dnext_bool
   26                     | visibility • STRING VAR_NAME dnext_string
   37 variable_initialization: visibility • INT int_init next_int
   38                        | visibility • DOUBLE double_init next_double
   39                        | visibility • CHAR char_init next_char
   40                        | visibility • BOOLEAN bool_init next_bool
   41                        | visibility • STRING string_init next_string

    INT      shift, and go to state 33
    CHAR     shift, and go to state 34
    DOUBLE   shift, and go to state 35
    BOOLEAN  shift, and go to state 36
    STRING   shift, and go to state 37


State 20

    9 class_members: variable_declaration • SEMICOLON

    SEMICOLON  shift, and go to state 38


State 21

    8 class_members: variable_initialization • SEMICOLON

    SEMICOLON  shift, and go to state 39


State 22

   10 class_members: variable_assignment • SEMICOLON

    SEMICOLON  shift, and go to state 40


State 23

    5 class_body: functions • class_body

    PUBLIC      shift, and go to state 9
    PRIVATE     shift, and go to state 10
    CLASS_NAME  shift, and go to state 11
    IDENT       shift, and go to state 12

    CURLY_BRACKET_RIGHT  reduce using rule 4 (class_body)
    $default             reduce using rule 19 (visibility)

    class_identifier         go to state 13
    class_body               go to state 41
    class_members            go to state 15
    class_instance           go to state 16
    member_access            go to state 17
    VAR_NAME                 go to state 18
    visibility               go to state 19
    variable_declaration     go to state 20
    variable_initialization  go to state 21
    variable_assignment      go to state 22
    functions                go to state 23
    function_visibility      go to state 24


State 24

   76 functions: function_visibility • VOID VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT
   77          | function_visibility • variable_type VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    VOID     shift, and go to state 42
    INT      shift, and go to state 43
    CHAR     shift, and go to state 44
    DOUBLE   shift, and go to state 45
    BOOLEAN  shift, and go to state 46
    STRING   shift, and go to state 47

    variable_type  go to state 48


State 25

   13 class_instance: CLASS_NAME IDENT • EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    EQUAL_SIGN  shift, and go to state 49


State 26

   14 member_access: IDENT DOT • IDENT parenthesis

    IDENT  shift, and go to state 50


State 27

    7 class_body: class_identifier class_body •

    $default  reduce using rule 7 (class_body)


State 28

    3 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT class_body CURLY_BRACKET_RIGHT •

    $default  reduce using rule 3 (class_identifier)


State 29

    6 class_body: class_members class_body •

    $default  reduce using rule 6 (class_body)


State 30

   12 class_members: class_instance SEMICOLON •

    $default  reduce using rule 12 (class_members)


State 31

   11 class_members: member_access SEMICOLON •

    $default  reduce using rule 11 (class_members)


State 32

   57 variable_assignment: VAR_NAME EQUAL_SIGN • expression

    BRACKET_LEFT   shift, and go to state 51
    MINUS          shift, and go to state 52
    CLASS_NAME     shift, and go to state 53
    IDENT          shift, and go to state 54
    INT_VALUE      shift, and go to state 55
    CHAR_VALUE     shift, and go to state 56
    DOUBLE_VALUE   shift, and go to state 57
    BOOLEAN_VALUE  shift, and go to state 58
    STRING_VALUE   shift, and go to state 59

    VAR_NAME        go to state 60
    expression      go to state 61
    variable_value  go to state 62


State 33

   22 variable_declaration: visibility INT • VAR_NAME dnext_int
   37 variable_initialization: visibility INT • int_init next_int

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME  go to state 63
    int_init  go to state 64


State 34

   24 variable_declaration: visibility CHAR • VAR_NAME dnext_char
   39 variable_initialization: visibility CHAR • char_init next_char

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME   go to state 65
    char_init  go to state 66


State 35

   23 variable_declaration: visibility DOUBLE • VAR_NAME dnext_double
   38 variable_initialization: visibility DOUBLE • double_init next_double

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME     go to state 67
    double_init  go to state 68


State 36

   25 variable_declaration: visibility BOOLEAN • VAR_NAME dnext_bool
   40 variable_initialization: visibility BOOLEAN • bool_init next_bool

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME   go to state 69
    bool_init  go to state 70


State 37

   26 variable_declaration: visibility STRING • VAR_NAME dnext_string
   41 variable_initialization: visibility STRING • string_init next_string

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME     go to state 71
    string_init  go to state 72


State 38

    9 class_members: variable_declaration SEMICOLON •

    $default  reduce using rule 9 (class_members)


State 39

    8 class_members: variable_initialization SEMICOLON •

    $default  reduce using rule 8 (class_members)


State 40

   10 class_members: variable_assignment SEMICOLON •

    $default  reduce using rule 10 (class_members)


State 41

    5 class_body: functions class_body •

    $default  reduce using rule 5 (class_body)


State 42

   76 functions: function_visibility VOID • VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME  go to state 73


State 43

   66 variable_type: INT •

    $default  reduce using rule 66 (variable_type)


State 44

   68 variable_type: CHAR •

    $default  reduce using rule 68 (variable_type)


State 45

   67 variable_type: DOUBLE •

    $default  reduce using rule 67 (variable_type)


State 46

   69 variable_type: BOOLEAN •

    $default  reduce using rule 69 (variable_type)


State 47

   70 variable_type: STRING •

    $default  reduce using rule 70 (variable_type)


State 48

   77 functions: function_visibility variable_type • VAR_NAME BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 53
    IDENT       shift, and go to state 54

    VAR_NAME  go to state 74


State 49

   13 class_instance: CLASS_NAME IDENT EQUAL_SIGN • NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    NEW  shift, and go to state 75


State 50

   14 member_access: IDENT DOT IDENT • parenthesis

    BRACKET_LEFT  shift, and go to state 76

    $default  reduce using rule 15 (parenthesis)

    parenthesis  go to state 77


State 51

   64 expression: BRACKET_LEFT • expression BRACKET_RIGHT

    BRACKET_LEFT   shift, and go to state 51
    MINUS          shift, and go to state 52
    CLASS_NAME     shift, and go to state 53
    IDENT          shift, and go to state 54
    INT_VALUE      shift, and go to state 55
    CHAR_VALUE     shift, and go to state 56
    DOUBLE_VALUE   shift, and go to state 57
    BOOLEAN_VALUE  shift, and go to state 58
    STRING_VALUE   shift, and go to state 59

    VAR_NAME        go to state 60
    expression      go to state 78
    variable_value  go to state 62


State 52

   65 expression: MINUS • expression

    BRACKET_LEFT   shift, and go to state 51
    MINUS          shift, and go to state 52
    CLASS_NAME     shift, and go to state 53
    IDENT          shift, and go to state 54
    INT_VALUE      shift, and go to state 55
    CHAR_VALUE     shift, and go to state 56
    DOUBLE_VALUE   shift, and go to state 57
    BOOLEAN_VALUE  shift, and go to state 58
    STRING_VALUE   shift, and go to state 59

    VAR_NAME        go to state 60
    expression      go to state 79
    variable_value  go to state 62


State 53

   18 VAR_NAME: CLASS_NAME •

    $default  reduce using rule 18 (VAR_NAME)


State 54

   17 VAR_NAME: IDENT •

    $default  reduce using rule 17 (VAR_NAME)


State 55

   71 variable_value: INT_VALUE •

    $default  reduce using rule 71 (variable_value)


State 56

   72 variable_value: CHAR_VALUE •

    $default  reduce using rule 72 (variable_value)


State 57

   73 variable_value: DOUBLE_VALUE •

    $default  reduce using rule 73 (variable_value)


State 58

   74 variable_value: BOOLEAN_VALUE •

    $default  reduce using rule 74 (variable_value)


State 59

   75 variable_value: STRING_VALUE •

    $default  reduce using rule 75 (variable_value)


State 60

   59 expression: VAR_NAME •

    $default  reduce using rule 59 (expression)


State 61

   57 variable_assignment: VAR_NAME EQUAL_SIGN expression •
   60 expression: expression • PLUS expression
   61           | expression • MINUS expression
   62           | expression • MULTIPLY expression
   63           | expression • DIVIDE expression

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    MULTIPLY  shift, and go to state 82
    DIVIDE    shift, and go to state 83

    $default  reduce using rule 57 (variable_assignment)


State 62

   58 expression: variable_value •

    $default  reduce using rule 58 (expression)


State 63

   22 variable_declaration: visibility INT VAR_NAME • dnext_int
   52 int_init: VAR_NAME • EQUAL_SIGN expression

    EQUAL_SIGN  shift, and go to state 84
    COMMA       shift, and go to state 85

    $default  reduce using rule 27 (dnext_int)

    dnext_int  go to state 86


State 64

   37 variable_initialization: visibility INT int_init • next_int

    COMMA  shift, and go to state 87

    $default  reduce using rule 42 (next_int)

    next_int  go to state 88


State 65

   24 variable_declaration: visibility CHAR VAR_NAME • dnext_char
   54 char_init: VAR_NAME • EQUAL_SIGN CHAR_VALUE

    EQUAL_SIGN  shift, and go to state 89
    COMMA       shift, and go to state 90

    $default  reduce using rule 31 (dnext_char)

    dnext_char  go to state 91


State 66

   39 variable_initialization: visibility CHAR char_init • next_char

    COMMA  shift, and go to state 92

    $default  reduce using rule 46 (next_char)

    next_char  go to state 93


State 67

   23 variable_declaration: visibility DOUBLE VAR_NAME • dnext_double
   53 double_init: VAR_NAME • EQUAL_SIGN DOUBLE_VALUE

    EQUAL_SIGN  shift, and go to state 94
    COMMA       shift, and go to state 95

    $default  reduce using rule 29 (dnext_double)

    dnext_double  go to state 96


State 68

   38 variable_initialization: visibility DOUBLE double_init • next_double

    COMMA  shift, and go to state 97

    $default  reduce using rule 44 (next_double)

    next_double  go to state 98


State 69

   25 variable_declaration: visibility BOOLEAN VAR_NAME • dnext_bool
   55 bool_init: VAR_NAME • EQUAL_SIGN BOOLEAN_VALUE

    EQUAL_SIGN  shift, and go to state 99
    COMMA       shift, and go to state 100

    $default  reduce using rule 33 (dnext_bool)

    dnext_bool  go to state 101


State 70

   40 variable_initialization: visibility BOOLEAN bool_init • next_bool

    COMMA  shift, and go to state 102

    $default  reduce using rule 48 (next_bool)

    next_bool  go to state 103


State 71

   26 variable_declaration: visibility STRING VAR_NAME • dnext_string
   56 string_init: VAR_NAME • EQUAL_SIGN STRING_VALUE

    EQUAL_SIGN  shift, and go to state 104
    COMMA       shift, and go to state 105

    $default  reduce using rule 35 (dnext_string)

    dnext_string  go to state 106


State 72

   41 variable_initialization: visibility STRING string_init • next_string

    COMMA  shift, and go to state 107

    $default  reduce using rule 50 (next_string)

    next_string  go to state 108


State 73

   76 functions: function_visibility VOID VAR_NAME • BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 109


State 74

   77 functions: function_visibility variable_type VAR_NAME • BRACKET_LEFT arguments BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 110


State 75

   13 class_instance: CLASS_NAME IDENT EQUAL_SIGN NEW • CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 111


State 76

   16 parenthesis: BRACKET_LEFT • BRACKET_RIGHT

    BRACKET_RIGHT  shift, and go to state 112


State 77

   14 member_access: IDENT DOT IDENT parenthesis •

    $default  reduce using rule 14 (member_access)


State 78

   60 expression: expression • PLUS expression
   61           | expression • MINUS expression
   62           | expression • MULTIPLY expression
   63           | expression • DIVIDE expression
   64           | BRACKET_LEFT expression • BRACKET_RIGHT

    BRACKET_RIGHT  shift, and go to state 113
    PLUS           shift, and go to state 80
    MINUS          shift, and go to state 81
    MULTIPLY       shift, and go to state 82
    DIVIDE         shift, and go to state 83


State 79

   60 expression: expression • PLUS expression
   61           | expression • MINUS expression
   62           | expression • MULTIPLY expression
   63           | expression • DIVIDE expression
   65           | MINUS expression •

    $default  reduce using rule 65 (expression)


State 80

   60 expression: expression PLUS • expression

    BRACKET_LEFT   shift, and go to state 51
    MINUS          shift, and go to state 52
    CLASS_NAME     shift, and go to state 53
    IDENT          shift, and go to state 54
    INT_VALUE      shift, and go to state 55
    CHAR_VALUE     shift, and go to state 56
    DOUBLE_VALUE   shift, and go to state 57
    BOOLEAN_VALUE  shift, and go to state 58
    STRING_VALUE   shift, and go to state 59
